--- a/WebKit/mac/ChangeLog
+++ b/WebKit/mac/ChangeLog
@@ -1,3 +1,13 @@
+2007-12-07  Darin Adler  <darin@apple.com>
+
+        Reviewed by Mitz.
+
+        - http://bugs.webkit.org/show_bug.cgi?id=15981
+          speed up visited-link code a bit
+
+        * History/WebHistory.mm: Removed unused Latin-1 code path.
+        (-[_WebCoreHistoryProvider containsURL:length:]): Updated for method name change.
+
 2007-12-07  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Sam Weinig.
