- fix Tiger build
        * platform/graphics/mac/MediaPlayerPrivateQTKit.mm: Tiger didn't even have
        QTKIT_VERSION_MAX_ALLOWED, so add logic to work without that.



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28542 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,5 +1,12 @@
 2007-12-07  Darin Adler  <darin@apple.com>
 
+        - fix Tiger build
+
+        * platform/graphics/mac/MediaPlayerPrivateQTKit.mm: Tiger didn't even have
+        QTKIT_VERSION_MAX_ALLOWED, so add logic to work without that.
+
+2007-12-07  Darin Adler  <darin@apple.com>
+
         - fix 64-bit build, hopefully without breaking Tiger build
 
         * platform/graphics/mac/MediaPlayerPrivateQTKit.mm:
