Build fix: added #include.
        * kjs/function_object.cpp:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28546 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,5 +1,11 @@
 2007-12-07  Geoffrey Garen  <ggaren@apple.com>
 
+        Build fix: added #include.
+
+        * kjs/function_object.cpp:
+
+2007-12-07  Geoffrey Garen  <ggaren@apple.com>
+
         Reviewed by Sam Weinig.
         
         Fixed crash seen running layout tests.
