--- a/WebKit/win/ChangeLog
+++ b/WebKit/win/ChangeLog
@@ -2,6 +2,13 @@
 
         Fix build.
 
+        * WebKit.vcproj/WebKit.vcproj:
+        * WebScriptCallFrame.cpp:
+
+2007-12-07  Steve Falkenburg  <sfalken@apple.com>
+
+        Fix build.
+
         * WebHistory.cpp:
         (_WebCoreHistoryProvider::containsURL):
 
