--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,16 @@
+2007-12-07  Dan Bernstein  <mitz@apple.com>
+
+        Reviewed by Sam Weinig.
+
+        - test for http://bugs.webkit.org/show_bug.cgi?id=16348
+          @font-face does not affect the default style
+
+        * fast/css/font-face-default-font.html: Added.
+        * platform/mac-leopard/fast/css: Added.
+        * platform/mac-leopard/fast/css/font-face-default-font-expected.checksum: Added.
+        * platform/mac-leopard/fast/css/font-face-default-font-expected.png: Added.
+        * platform/mac/fast/css/font-face-default-font-expected.txt: Added.
+
 2007-12-07  Darin Adler  <darin@apple.com>
 
         Reviewed by Adele.
