--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,16 @@
+2007-12-07  Dan Bernstein  <mitz@apple.com>
+
+        Reviewed by Sam Weinig.
+
+        - fix http://bugs.webkit.org/show_bug.cgi?id=16348
+          @font-face does not affect the default style
+
+        Test: fast/css/font-face-default-font.html
+
+        * dom/Document.cpp:
+        (WebCore::Document::recalcStyle): Pass our font selector to
+        Font::update() if we already have one.
+
 2007-12-07  Darin Adler  <darin@apple.com>
 
         - fix Windows build
