Mac Tiger build fix.
        Use the wtf prefix when including MathExtras.h.



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28562 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,11 @@
+2007-12-08  Rob Buis  <buis@kde.org>
+
+        Mac Tiger build fix.
+
+        Use the wtf prefix when including MathExtras.h.
+
+        * rendering/RenderMedia.cpp:
+
 2007-12-08  Alp Toker  <alp@atoker.com>
 
         GTK+ build fix (for ENABLE_VIDEO builds):
